--- a/package.json
+++ b/package.json
@@ -1,50 +1,45 @@
 {
-    "name": "oito_geo",
-    "version": "0.0.1",
-    "author": "Pedro Sousa ( Vor @ SketchPunk Labs )",
-    "description": "Math Library",
-    "keywords": [],
-    "license": "MIT",
-    "homepage": "https://github.com/sketchpunklabs/oito_geo#readme",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/sketchpunklabs/oito_geo.git"
-    },
-    "bugs": {
-        "url": "https://github.com/sketchpunklabs/oito_geo/issues"
-    },
-    "files": [
-        "dist"
-    ],
-    "main": "./dist/oito_geo.cjs.js",
-    "module": "./dist/oito_geo.es.js",
-    "types": "./dist/oito_geo.d.ts",
+    "name"          : "oito_geo",
+    "version"       : "0.0.1",
+    "author"        : "Pedro Sousa ( Vor @ SketchPunk Labs )",
+    "description"   : "Math Library",
+    "keywords"      : [],
+    "license"       : "MIT",
+    "homepage"      : "https://github.com/sketchpunklabs/oito_geo#readme",
+    "repository"    : { "url": "git+https://github.com/sketchpunklabs/oito_geo.git", "type": "git" },
+    "bugs"          : { "url": "https://github.com/sketchpunklabs/oito_geo/issues" },
+    "files"         : [ "dist" ],
+    "main"          : "./dist/oito_geo.cjs.js",
+    "module"        : "./dist/oito_geo.es.js",
+    "types"         : "./dist/oito_geo.d.ts",
     "exports": {
         ".": {
-            "import": "./dist/oito_geo.es.js",
-            "require": "./dist/oito_geo.cjs.js"
+            "import"    : "./dist/oito_geo.es.js",
+            "require"   : "./dist/oito_geo.cjs.js"
         }
     },
     "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "build:types": "tsc --declaration --noEmit false --emitDeclarationOnly --strict false --outDir ./dist",
-        "build:site": "vite build --mode site",
-        "pack": "npm pack",
-        "preview-site": "vite preview",
-        "lint": "eslint . --ext .ts",
-        "deletePkg": "rd /s /q \"node_modules/oito\"",
-        "installPkg": "npm install file:../oito/oito-0.0.1.tgz --force"
+        "dev"           : "vite",
+        "build"         : "vite build",
+        "build:types"   : "tsc --declaration --noEmit false --emitDeclarationOnly --strict false --outDir ./dist",
+        "build:site"    : "vite build --mode site",
+        "pack"          : "npm pack",
+        "preview-site"  : "vite preview",
+        "lint"          : "eslint . --ext .ts",
+        "deletePkg"     : "rd /s /q \"node_modules/oito\"",
+        "installPkg"    : "npm install file:../oito/oito-0.0.1.tgz --force"
     },
+    
     "dependencies": {
-        "oito": "file:../oito/oito-0.0.1.tgz"
+        "oito": "github:sketchpunklabs/oito"
     },
+
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^5.13.0",
-        "@typescript-eslint/parser": "^5.13.0",
-        "eslint": "^8.10.0",
-        "three": "^0.138.2",
-        "typescript": "^4.6.2",
-        "vite": "^2.8.6"
+        "@typescript-eslint/eslint-plugin"  : "^5.13.0",
+        "@typescript-eslint/parser"         : "^5.13.0",
+        "eslint"                            : "^8.10.0",
+        "three"                             : "^0.138.2",
+        "typescript"                        : "^4.6.2",
+        "vite"                              : "^2.8.6"
     }
 }
